# radar-localization

./: .gitignore  README.md  dbscan-path.webm  dbscan.webm  left.webm  right.webm  straight.webm
groundtruth-data/: left-half.csv  right-half.csv  straight-half.csv
src/ros_radar_configurator/ros_canopen/pb_msgs/: CMakeLists.txt  package.xml
src/ros_radar_configurator/ros_canopen/pb_msgs/msg/: cov.msg  dbscanOutput.msg  filteredReflector.msg  filteredReflectors.msg  individualRadar.msg  medianLatDistOverTime.msg  reflectorCount.msg  reflectors.msg
src/ros_radar_configurator/ros_canopen/radar_algorithm/: CMakeLists.txt  package.xml
src/ros_radar_configurator/ros_canopen/radar_algorithm/include/socketcan_bridge/: configuration.h  configuration_vars.h
src/ros_radar_configurator/ros_canopen/radar_algorithm/launch/: control.launch  localization.launch  plot.launch
src/ros_radar_configurator/ros_canopen/radar_algorithm/save/: July30th_diag_forward_Trajectories_100_path_errors.csv
src/ros_radar_configurator/ros_canopen/radar_algorithm/src/: cov_plot.py  dbscan.py  dbscan_vis.py  joy_trigger.py  kalman_filter.py  median_calculator.py  noisy_pcl_visualizer.py  odom_to_path.py  path_logger_sys.py  pathfollow_controller.py  radar_pointcloud.py  smooth_pcl_visualizer.py
src/ros_radar_configurator/ros_canopen/radar_algorithm/vicon/: deans_reflectors_final2.csv  deans_reflectors_new1.csv  straight-half.csv
src/ros_radar_configurator/ros_canopen/radar_rviz/: CMakeLists.txt
src/ros_radar_configurator/ros_canopen/radar_rviz/include/markers/: visualization_marker.h  visualization_marker_cluster.h
src/ros_radar_configurator/ros_canopen/radar_rviz/rviz/: April13.rviz  April17.rviz  ablation.rviz  k.rviz  kf-config.rviz  kf.rviz  raw_pcl.rviz  urdf.rviz
src/ros_radar_configurator/ros_canopen/radar_rviz/src/: vis.py  visualization_marker.cpp  visualization_marker_cluster.cpp  visualization_marker_node_cluster.cpp
src/ros_radar_configurator/ros_canopen/urdf_radar/urdf/: all.urdf.xacro  conti_radar.urdf  husky.urdf.xacro
