<?xml version="1.0"?>
<package format="2">.
  <name>pb_msgs</name>
  <version>0.7.6</version>
  <description>Continental Radar related message types</description>

  <author email="deansaco@rogers.com">Dean Sacoransky</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
