<?xml version="1.0"?>
<package format="2">
  <name>socketcan_bridge</name>
  <version>0.7.6</version>
  <description>Conversion nodes for messages from SocketCAN to a ROS Topic and vice versa.</description>

  <author email="deansaco@rogers.com">Dean Sacoransky</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>can_msgs</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>
  <depend>pb_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>csv</depend>
  <build_depend> python-numpy</build_depend>
  <exec_depend>python-numpy</exec_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
